--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   data_connection_checker: ^0.3.4
   badges: ^2.0.3
   animated_splash_screen: ^1.3.0
+  dropdown_button2: ^1.9.2
 
 dev_dependencies:
   flutter_test:
